# liveplayer

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
src/: app.manifest  main.c  mpv_dynamic.c  mpv_dynamic.h  resource.h  resource.rc
